# scponly

./: .gitignore  Makefile.am  aclocal.m4  configure.ac
src/: helper.c  netbsd_getopt_long.c  scponly.c  scponly.h
